# ontolog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
.plans/: IMPLEMENTATION_PLAN.md  README.md  chapter_1.plan.md  chapter_2.plan.md  chapter_3.plan.md  chapter_4.plan.md  chapter_5.plan.md  chapter_6.plan.md  chapter_7.plan.md  chapter_8.plan.md  unified.plan.md
benchmarks/: README.md  __init__.py  inference_latency.py  metrics.py  template_accuracy.py  template_throughput.py
docs/: api.md  architecture.md  benchmarks.md  conf.py  export.md  getting_started.md  index.md  ingestion.md  releasing.md  requirements.txt  templates.md
examples/: README.md  basic_cli.sh  controlboard.py
scripts/: ci.sh  fetch_corpora.py
src/ontolog/: __init__.py  config.py  errors.py  pipeline.py  types.py
src/ontolog/cli/: __init__.py  logging.py  main.py  options.py  output.py
src/ontolog/cli/export/: __init__.py  commands.py
src/ontolog/cli/graph/: __init__.py  commands.py
src/ontolog/cli/infer/: __init__.py  commands.py
src/ontolog/cli/ingest/: __init__.py  commands.py
src/ontolog/cli/templates/: __init__.py  commands.py
src/ontolog/evidence/: __init__.py  graph.py  loader.py  runner.py  scoring.py
src/ontolog/export/: __init__.py  _extras.py  domain_json.py  enum_codegen.py  enum_slug.py  evidence_graph_export.py  formats.py  full_bundle.py  graphml.py  identifiers.py  json_schema.py  layout.py  markdown_report.py  mermaid.py  options.py  pydantic_gen.py  registry.py  renderer.py  templating.py  type_map.py  view.py
src/ontolog/export/exporters/: __init__.py  domain_json.py  graphml.py  json_schema.py  markdown_report.py  mermaid.py  pydantic_gen.py
src/ontolog/export/graph_exporters/: __init__.py  evidence_graph_export.py  full_bundle.py
src/ontolog/export/rendering/: __init__.py  formatting.py  templating.py
src/ontolog/export/rendering/templates/: markdown_report.md.j2  mermaid.mmd.j2
src/ontolog/export/templates/: markdown_report.md.j2
src/ontolog/export/typemapping/: __init__.py  enum_codegen.py  type_map.py
src/ontolog/inference/: __init__.py  base.py  builder.py  entities.py  event_nouns.py  events.py  fields.py  hierarchy.py  queries.py  relationships.py  runner.py  scoring.py  states.py  status_values.py
src/ontolog/inference/aggregate/: __init__.py  _grouping.py  entities.py  events.py  fields.py  relationships.py  scoring.py  states.py
src/ontolog/ingestion/: __init__.py  datetime_parsers.py  formats.py  preprocessors.py  reader.py  registry.py  source_adapters.py
src/ontolog/ingestion/parsers/: __init__.py  base.py  json.py  plain.py  syslog.py  syslog_adapters.py
src/ontolog/models/: __init__.py  candidate.py  domain.py  evidence.py  finding.py  log_record.py  template.py
src/ontolog/providers/: __init__.py  base.py  co_occurrence.py  ids.py  namespace.py  process.py  regex.py  statistics.py  temporal.py
src/ontolog/storage/: __init__.py  queries.py  sqlite.py
src/ontolog/templates/: __init__.py  extractor.py  masking.py  patterns.py
tests/: conftest.py  helpers.py
tests/fixtures/: sample.jsonl
tests/fixtures/loghub/: README.md  apache_2k_labels.csv  openssh_2k_labels.csv
tests/integration/: test_infer_export_e2e.py  test_inference_controlboard.py  test_inference_nested_hierarchy.py  test_inference_order_lifecycle.py  test_ingest_fixtures.py  test_provider_controlboard.py  test_template_fixtures.py
tests/unit/: test_aggregate_conflicts.py  test_aggregate_entities.py  test_aggregate_fields.py  test_aggregate_integration.py  test_aggregate_scoring.py  test_cli.py  test_cli_export.py  test_cli_graph.py  test_cli_infer.py  test_cli_ingest.py  test_cli_templates.py  test_config.py  test_domain_model.py  test_errors.py  test_evidence_graph.py  test_evidence_loader.py  test_evidence_model.py  test_evidence_scoring.py  test_export_domain_json.py  test_export_evidence_graph.py  test_export_filter.py  test_export_full_bundle.py  test_export_graphml.py  test_export_identifiers.py  test_export_json_schema.py  test_export_markdown.py  test_export_mermaid.py  test_export_order_lifecycle.py  test_export_pydantic_gen.py  test_export_renderer.py  test_export_type_map.py  test_extractor.py  test_fetch_corpora.py  test_inference_builder.py  test_inference_entities.py  test_inference_events.py  test_inference_fields.py  test_inference_hierarchy.py  test_inference_queries.py  test_inference_registry.py  (+23 more)
