[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontolog"
version = "0.0.1"
description = "Probabilistic domain-model inference from application logs"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Vadim Schultz" }]
keywords = ["logs", "domain-model", "inference", "drain3", "evidence", "templates"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    "drain3>=0.9.11",
    "networkx>=3.6.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
    "typing-extensions>=4.5",
]

[project.scripts]
ontolog = "ontolog.cli.main:app"

[project.optional-dependencies]
graph = []
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=2.3.0",
    "hypothesis>=6.156.6",
    "jsonschema>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=5.1.0",
    "sphinx-autodoc-typehints>=2.0",
]

[project.urls]
Homepage = "https://github.com/vadim-schultz/ontolog"
Documentation = "https://ontolog.readthedocs.io"
Repository = "https://github.com/vadim-schultz/ontolog"
Issues = "https://github.com/vadim-schultz/ontolog/issues"
Changelog = "https://github.com/vadim-schultz/ontolog/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ontolog = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "examples", "benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "C4", "D", "DTZ", "T10", "EM", "ISC", "PIE", "PT", "RET", "SIM", "TCH", "ARG", "PTH", "PL", "TRY", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"src/ontolog/__init__.py" = ["TC001", "TC003"]
"src/ontolog/models/log_record.py" = ["TC003"]
"src/ontolog/ingestion/parsers/base.py" = ["PLR0911", "PLR0913", "DTZ007", "TC003"]
"src/ontolog/ingestion/parsers/json.py" = ["ANN401", "TC001"]
"src/ontolog/ingestion/parsers/plain.py" = ["TC001"]
"src/ontolog/ingestion/parsers/syslog.py" = ["DTZ007", "PLR2004", "TC001"]
"src/ontolog/ingestion/parsers/syslog_adapters.py" = ["DTZ007", "PLR2004", "TC001", "ARG002"]
"src/ontolog/ingestion/datetime_parsers.py" = ["DTZ007"]
"src/ontolog/ingestion/preprocessors.py" = ["ARG002", "TC001", "TC003"]
"src/ontolog/ingestion/reader.py" = ["TC001", "TC003"]
"src/ontolog/ingestion/registry.py" = ["TC001"]
"src/ontolog/ingestion/source_adapters.py" = ["ARG002"]
"src/ontolog/pipeline.py" = ["TC001"]
"src/ontolog/cli/main.py" = ["ARG001", "TC003"]
"src/ontolog/cli/output.py" = ["TC001", "TC003"]
"src/ontolog/cli/ingest/commands.py" = ["ARG001", "TC003", "PLR0913"]
"src/ontolog/cli/templates/commands.py" = ["ARG001", "TC003", "PLR0913"]
"src/ontolog/cli/graph/commands.py" = ["ARG001", "TC003"]
"src/ontolog/errors.py" = ["TC003"]
"src/ontolog/models/evidence.py" = ["TC003"]
"src/ontolog/evidence/graph.py" = ["TC003", "D102", "D107", "TRY003", "EM102"]
"src/ontolog/evidence/loader.py" = ["TC003"]
"src/ontolog/evidence/runner.py" = ["TC001", "TC003"]
"src/ontolog/evidence/scoring.py" = ["TC003"]
"src/ontolog/models/finding.py" = ["TC001", "TC003"]
"src/ontolog/providers/**/*.py" = ["ARG002", "TC001", "TC003", "PLR0913"]
"src/ontolog/inference/**/*.py" = ["ARG002", "TC001", "TC003", "PLR0913"]
"src/ontolog/export/**/*.py" = ["TC001"]
"src/ontolog/cli/export/commands.py" = ["ARG001", "TC001", "TC003"]
"src/ontolog/models/candidate.py" = ["TC001", "TC003"]
"src/ontolog/models/domain.py" = ["TC001", "TC003"]
"src/ontolog/templates/patterns.py" = ["E501"]
"src/ontolog/models/template.py" = ["TC003"]
"src/ontolog/templates/masking.py" = ["TC001", "E501"]
"src/ontolog/templates/extractor.py" = ["TC001", "TC003", "D105", "TRY003", "EM102"]
"src/ontolog/storage/sqlite.py" = ["TC003", "E501", "D102", "D105", "D107", "TRY003", "EM102"]
"tests/**/*.py" = ["S101", "PLR2004", "ANN001", "ARG002", "TC001", "TC003", "D", "PLC0415", "PT018", "E501"]
"examples/**/*.py" = ["T201"]
"benchmarks/**/*.py" = ["T201"]
"benchmarks/__init__.py" = ["D104", "T201"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["ontolog"]

[[tool.mypy.overrides]]
module = ["drain3", "drain3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx"
ignore_missing_imports = true
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests", "benchmarks"]
markers = [
    "corpus: tests that require downloaded LogHub corpora (deselect by default)",
]
addopts = "--cov=ontolog --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source_pkgs = ["ontolog"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
